[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cnt = "my_history.cli:query"
my-history = "my_history.arg_parse:argp"

[tool.pdm]
distribution = true 
