[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/j25ng/my_history"
Issues = "https://github.com/j25ng/my_history/issues"

[project.scripts]
cnt = "my_history.cli:query"
my-history = "my_history.arg_parse:argp"
my-history-test = "my_history.arg_parse_test:argp"

[tool.pdm]
distribution = true 

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
