[project]
name = "my_history"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/j25ng/my_history"
Issues = "https://github.com/j25ng/my_history/issues"

[project.scripts]
my-history = "my_history.cli:cmd"
history-parse = "my_history.arg_parse:argp"
my-history-test = "my_history.arg_parse_test:argp"

[tool.pdm]
distribution = true 

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = "pip install git+https://github.com/j25ng/my_history.git@0.2.0/args"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
